update with links to me

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="avenir">
   <header class="w-100 pa3 ph5-ns">
-    <h1 class="fw1">Get Average Color From Image</h1>
+    <h1 class="fw1 tc">Get Average Color From Image</h1>
   </header>
   <main class="bt w-100 b--red pr5 pl5 pt1">
     <p class="fw3">Note: Only works with images that have allowed <code class="green">Access-Control-Allow-Origin</code> on server.</p>
@@ -42,5 +42,11 @@
   </div>
 </div>
 </main>
+<footer class="tc pa2">
+  <p>Made by <a href="https://github.com/overlandandseas">@øverlandandseas</a></p>
+  <p>
+  <a href="https://github.com/overlandandseas/get-average-color">Github Repo</a></p>
+  
+</footer>
 </body>
 </html>
